0.1:
		* initial version
0.1.1:
		* add candle/whisker plots

0.1.1.1:
		* export MinMaxSeries

0.1.1.2:
		* fixed examples for Scale (Log/Linear)

0.1.1.3:
		* fixed bug (lack of stroke) with datasets larger than window
		* hollow points fill with white

0.1.1.4:
		* remove Unicode dependency

0.1.2:
		* improve axis line joins
		* annotations

0.1.2.1:
		* save/restore cairo annotation
		* add setDataset documentation
		* improve Dashes